--- a/src/main/resources/templates/MaterialOrder/show.html
+++ b/src/main/resources/templates/MaterialOrder/show.html
@@ -58,12 +58,15 @@ document.addEventListener("DOMContentLoaded", function() {
                                             <a th:if="${order.materialType == 'PACKAGE'}" th:href="@{'/material-order/material/' + ${order.materialId} + '?materialType=PACKAGE'}">Кутия</a>
                                         </td>
                                         <td th:text="${order.orderedQuantity}"></td>
+                                        <th:block
+                                                th:if="${session.sessionToken != null and session.sessionRole == 'ADMIN'}">
                                         <td>
                                             <form th:action="@{'/material-order/delete/' + ${order.id}}" method="post"
                                                   th:attr="onsubmit='return confirm(\'Сигурни ли сте, че искате да изтриете поръчка с номер: ' + ${order.id} + '?\');'">
                                                 <button type="submit" class="btn btn-danger">Изтрий</button>
                                             </form>
                                         </td>
+                                        </th:block>
                                         <td>
                                             <form th:action="@{'/material-order/edit/' + ${order.id}}" method="get">
                                                 <button type="submit" class="btn btn-primary">Редактирай</button>
@@ -105,12 +108,15 @@ document.addEventListener("DOMContentLoaded", function() {
                                         <td th:text="${order.receivedQuantity}"></td>
                                         <td th:text="${order.materialPrice}"></td>
                                         <td th:text="${order.arrivalDate}"></td>
+                                        <th:block
+                                                th:if="${session.sessionToken != null and session.sessionRole == 'ADMIN'}">
                                         <td>
                                             <form th:action="@{'/material-order/delete/' + ${order.id}}" method="post"
                                                   th:attr="onsubmit='return confirm(\'Сигурни ли сте, че искате да изтриете поръчка с номер: ' + ${order.id} + '?\');'">
                                                 <button type="submit" class="btn btn-danger">Изтрий</button>
                                             </form>
                                         </td>
+                                        </th:block>
                                         <td>
                                             <form th:action="@{'/material-order/edit/' + ${order.id}}" method="get">
                                                 <button type="submit" class="btn btn-primary">Редактирай</button>
