--- a/src/main/resources/templates/User/create.html
+++ b/src/main/resources/templates/User/create.html
@@ -5,7 +5,7 @@
     <!--    LINKS  -->
     <th:block th:include="~{fragments/links}"></th:block>
 
-    <title> Потрбители </title>
+    <title> Потрeбители </title>
     <link href="/css/form.css" rel="stylesheet">
 </head>
 <script>
@@ -44,9 +44,19 @@ document.addEventListener("DOMContentLoaded", function() {
                                                th:field="*{username}" required>
                                     </div>
                                     <div class="form-group">
-                                        <label for="fullName">Пълно име</label>
-                                        <input type="text" class="form-control" id="fullName" name="fullName"
-                                               th:field="*{fullName}" required>
+                                        <label for="firstname">Първо име</label>
+                                        <input type="text" class="form-control" id="firstname" name="firstname"
+                                               th:field="*{firstname}" required>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="lastName">Фамилно име</label>
+                                        <input type="text" class="form-control" id="lastName" name="lastName"
+                                               th:field="*{lastname}" required>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="address">Адрес</label>
+                                        <input type="text" class="form-control" id="address" name="address"
+                                               th:field="*{address}" required>
                                     </div>
                                     <div class="form-group">
                                         <label for="email">Е-поща</label>
