--- a/src/main/resources/templates/User/edit.html
+++ b/src/main/resources/templates/User/edit.html
@@ -45,9 +45,19 @@ document.addEventListener("DOMContentLoaded", function() {
                                                th:field="*{username}" required>
                                     </div>
                                     <div class="form-group">
-                                        <label for="fullName">Пълно име</label>
-                                        <input type="text" class="form-control" id="fullName" name="fullName"
-                                               th:field="*{fullName}" required>
+                                        <label for="firstname">Първо име</label>
+                                        <input type="text" class="form-control" id="firstname" name="firstname"
+                                               th:field="*{firstname}" required>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="lastname">Фамилно име</label>
+                                        <input type="text" class="form-control" id="lastname" name="lastname"
+                                               th:field="*{lastname}" required>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="address">Адрес</label>
+                                        <input type="text" class="form-control" id="address" name="address"
+                                               th:field="*{address}" required>
                                     </div>
                                     <div class="form-group">
                                         <label for="email">Е-поща</label>
