--- a/src/main/resources/templates/User/show.html
+++ b/src/main/resources/templates/User/show.html
@@ -54,7 +54,9 @@ document.addEventListener("DOMContentLoaded", function() {
                                     <tr>
                                         <th>ID</th>
                                         <th>Потребителско име</th>
-                                        <th>Пълно име</th>
+                                        <th>Първо име</th>
+                                        <th>Фамилно име</th>
+                                        <th>Адрес</th>
                                         <th>Е-поща</th>
                                         <th>Роля</th>
                                     </tr>
@@ -63,18 +65,20 @@ document.addEventListener("DOMContentLoaded", function() {
                                     <tr th:each="user : ${users}">
                                         <td th:text="${user.id}"></td>
                                         <td th:text="${user.username}"></td>
-                                        <td th:text="${user.fullName}"></td>
+                                        <td th:text="${user.firstname}"></td>
+                                        <td th:text="${user.lastname}"></td>
+                                        <td th:text="${user.address}"></td>
                                         <td th:text="${user.email}"></td>
                                         <td th:text="${user.role}"></td>
                                         <td>
                                             <form th:action="@{'/user/delete/' + ${user.id}}" method="post"
-                                                  th:attr="onsubmit='return confirm(\'Сигурни ли сте, че искате да изтриете Потребител с име: ' + ${user.fullName} + '?\');'">
+                                                  th:attr="onsubmit='return confirm(\'Сигурни ли сте, че искате да изтриете Потребител с име: ' + ${user.firstname} + '?\');'">
                                                 <button type="submit" class="btn btn-danger">Изтрий</button>
                                             </form>
                                         </td>
                                         <td>
                                             <form th:action="@{'/user/editUser/' + ${user.id}}" method="get"
-                                                  th:attr="onsubmit='return confirm(\'Сигурни ли сте, че искате да редактирате Потребител с име: ' + ${user.fullName} + '?\');'">
+                                                  th:attr="onsubmit='return confirm(\'Сигурни ли сте, че искате да редактирате Потребител с име: ' + ${user.firstname} + '?\');'">
                                                 <button type="submit" class="btn btn-primary">Редактирай</button>
                                             </form>
                                         </td>
