--- a/src/main/resources/templates/Client/create.html
+++ b/src/main/resources/templates/Client/create.html
@@ -5,7 +5,7 @@
   <!--    LINKS  -->
   <th:block th:include="~{fragments/links}"></th:block>
 
-  <title> Тарелки </title>
+  <title> Клиенти </title>
   <link href="/css/form.css" rel="stylesheet">
 </head>
 <script>
