make it possible for a package to be associated with one product rename labels and give access the transport manager to monthlyOrders

--- a/src/main/resources/templates/MonthlyOrder/addProductToExistingOrder.html
+++ b/src/main/resources/templates/MonthlyOrder/addProductToExistingOrder.html
@@ -5,7 +5,7 @@
     <!--    LINKS  -->
     <th:block th:include="~{fragments/links}"></th:block>
 
-    <title> Добави продукти към месечна поръчка </title>
+    <title> Добави продукти към поръчка </title>
     <link href="/css/form.css" rel="stylesheet">
     <link href="/css/checkbox.css" rel="stylesheet">
 </head>
@@ -33,7 +33,7 @@ document.addEventListener("DOMContentLoaded", function() {
             <div class="form-container">
                 <div class="card custom-card-width-lg">
                     <div class="card-header">
-                        <h5 class="card-title mb-0">Добави продукти към месечна поръчка</h5>
+                        <h5 class="card-title mb-0">Добави продукти към поръчка</h5>
                     </div>
                     <div class="card-body">
                         <form action="/monthlyOrder/submitExistingOrder" method="post">
