--- a/src/main/resources/templates/MonthlyOrder/create.html
+++ b/src/main/resources/templates/MonthlyOrder/create.html
@@ -33,7 +33,7 @@ document.addEventListener("DOMContentLoaded", function() {
             <div class="form-container">
                 <div class="card custom-card-width-lg">
                     <div class="card-header">
-                        <h5 class="card-title mb-0">Създай месечна поръчка</h5>
+                        <h5 class="card-title mb-0">Създай поръчка</h5>
                     </div>
                     <div class="card-body">
                         <form action="/monthlyOrder/submit" method="post">
