--- a/src/main/resources/templates/MonthlyOrder/edit.html
+++ b/src/main/resources/templates/MonthlyOrder/edit.html
@@ -33,7 +33,7 @@ document.addEventListener("DOMContentLoaded", function() {
       <div class="form-container">
         <div class="card custom-card-width-lg">
           <div class="card-header">
-            <h5 class="card-title mb-0">Редактирай месечна поръчка</h5>
+            <h5 class="card-title mb-0">Редактирай поръчка</h5>
           </div>
           <div class="card-body">
             <form th:action="@{'/monthlyOrder/edit/' + ${order.id}}" method="get" th:object="${order}">
