--- a/src/main/resources/templates/MonthlyOrder/orderDetails.html
+++ b/src/main/resources/templates/MonthlyOrder/orderDetails.html
@@ -34,7 +34,7 @@ document.addEventListener("DOMContentLoaded", function() {
                 <div class="col-lg-10 mx-auto">
                     <div class="card custom-card-width-lg">
                         <div class="card-header">
-                            <h5 class="card-title mb-0">Месечни поръчки</h5>
+                            <h5 class="card-title mb-0">Поръчки</h5>
                         </div>
                         <div class="text-center">
                             <form th:action="@{'/monthlyOrder/addProductToExistingOrder/' + ${order.id}}" method="get">
