Product orders - divided into 2 buttons: 1) Transport of an individual order  2) Transport to monthly order - in the drop-down menu with customers we see only customers with an active monthly order; then in the product dropdown we only see those to active monthly orders

--- a/src/main/resources/templates/OrderProduct/show.html
+++ b/src/main/resources/templates/OrderProduct/show.html
@@ -39,13 +39,22 @@ document.addEventListener("DOMContentLoaded", function() {
                         </div>
                         <th:block th:if="${session.sessionToken != null and session.sessionRole == 'ADMIN'}">
                             <div class="text-center">
-                                <a href="/order/create" class="btn btn-primary">Транспортиране на стоки</a>
+                                <a href="/order/create" class="btn btn-primary">Транспортиране на индивидуална поръчка</a>
+                            </div>
+                            <br>
+                            <div class="text-center">
+                                <a href="/order/monthly/create" class="btn btn-primary">Транспортиране към месечна поръчка</a>
                             </div>
                         </th:block>
+                        <br>
                         <th:block
                                 th:if="${session.sessionToken != null and session.sessionRole == 'TRANSPORT_MANAGER'}">
                             <div class="text-center">
-                                <a href="/order/create" class="btn btn-primary">Транспортиране на стоки</a>
+                                <a href="/order/create" class="btn btn-primary">Транспортиране на индивидуална поръчка</a>
+                            </div>
+                            <br>
+                            <div class="text-center">
+                                <a href="/order/create" class="btn btn-primary">Транспортиране към месечна поръчка</a>
                             </div>
                         </th:block>
                         <th:block th:if="${session.sessionToken != null and session.sessionRole == 'ADMIN'}">
@@ -54,6 +63,7 @@ document.addEventListener("DOMContentLoaded", function() {
                                     Материали за Всички Поръчки</a>
                             </div>
                         </th:block>
+                        <br>
                         <th:block
                                 th:if="${session.sessionToken != null and session.sessionRole == 'PRODUCTION_MANAGER'}">
                             <div class="text-center">
