--- a/src/main/resources/templates/OrderProduct/show.html
+++ b/src/main/resources/templates/OrderProduct/show.html
@@ -39,7 +39,7 @@ document.addEventListener("DOMContentLoaded", function() {
                         </div>
                         <th:block th:if="${session.sessionToken != null and session.sessionRole == 'ADMIN'}">
                             <div class="text-center">
-                                <a href="/order/create" class="btn btn-primary">Транспортиране на индивидуална поръчка</a>
+                                <a href="/order/create" class="btn btn-primary">Транспортиране на стоки</a>
                             </div>
                             <br>
                             <div class="text-center">
@@ -50,11 +50,11 @@ document.addEventListener("DOMContentLoaded", function() {
                         <th:block
                                 th:if="${session.sessionToken != null and session.sessionRole == 'TRANSPORT_MANAGER'}">
                             <div class="text-center">
-                                <a href="/order/create" class="btn btn-primary">Транспортиране на индивидуална поръчка</a>
+                                <a href="/order/create" class="btn btn-primary">Транспортиране на стоки</a>
                             </div>
                             <br>
                             <div class="text-center">
-                                <a href="/order/create" class="btn btn-primary">Транспортиране към месечна поръчка</a>
+                                <a href="/order/monthly/create" class="btn btn-primary">Транспортиране към месечна поръчка</a>
                             </div>
                         </th:block>
                         <th:block th:if="${session.sessionToken != null and session.sessionRole == 'ADMIN'}">
