--- a/src/main/resources/templates/Product/edit.html
+++ b/src/main/resources/templates/Product/edit.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+
 <head>
-    <!-- LINKS -->
+    <!--    LINKS  -->
     <th:block th:include="~{fragments/links}"></th:block>
 
-    <title>Редактирай продукт</title>
+    <title> Редактирай продукт </title>
     <link href="/css/form.css" rel="stylesheet">
 </head>
 <script>
@@ -75,6 +76,11 @@ document.addEventListener("DOMContentLoaded", function() {
         </div>
     </div>
 </div>
+<script>
+$(document).ready(function() {
+$('#packageId').select2();
+});
+</script>
 <script src="/js/app.js"></script>
 </body>
 </html>
