--- a/src/main/resources/templates/Plate/show.html
+++ b/src/main/resources/templates/Plate/show.html
@@ -66,8 +66,17 @@ document.addEventListener("DOMContentLoaded", function() {
                                     <tbody>
                                     <tr th:each="plate : ${plates}" data-id="${plate.id}" class="plate-row">
                                         <td>
-                                            <img th:src="@{${backendBaseUrl} + '/'+ ${plate.photo}}" alt="no image"
-                                                 height="100" width="100">
+                                            <img th:if="${plate.photo != null}"
+                                                 th:src="@{${backendBaseUrl} + '/' + ${plate.photo}}"
+                                                 alt="no image"
+                                                 height="100"
+                                                 width="100">
+                                            <img th:unless="${plate.photo != null}"
+                                                 class="card-img-top"
+                                                 src="/img/photos/noImage.png"
+                                                 alt="Default Image"
+                                                 height="100"
+                                                 width="100">
                                         </td>
                                         <td th:text="${plate.id}"></td>
                                         <td th:text="${plate.name}"></td>
